stop logo in footer from disappearing on mobile

--- a/style/modules/footer.css
+++ b/style/modules/footer.css
@@ -110,6 +110,10 @@
         padding-top: 15px;
     }
 
+    .footer--mobileBizCard img {
+        width: 100%;
+    }
+
     .footer--panel {
         margin: 20px 8px;
     }
